fix: proto package import
