# backend/openapi.yaml
@@ -196,6 +196,47 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/nesgo.webapi.v1.GetRoomResponse'
+    /api/v1/room/{roomId}:
+        put:
+            tags:
+                - WebApi
+            operationId: WebApi_UpdateRoom
+            parameters:
+                - name: roomId
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/nesgo.webapi.v1.UpdateRoomRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/nesgo.webapi.v1.UpdateRoomResponse'
+        delete:
+            tags:
+                - WebApi
+            operationId: WebApi_DeleteRoom
+            parameters:
+                - name: roomId
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/nesgo.webapi.v1.DeleteRoomResponse'
     /api/v1/room/{roomId}/join:
         post:
             tags:
@@ -354,6 +395,9 @@ components:
                 memberLimit:
                     type: integer
                     format: int32
+        nesgo.webapi.v1.DeleteRoomResponse:
+            type: object
+            properties: {}
         nesgo.webapi.v1.GetRoomResponse:
             type: object
             properties:
@@ -523,6 +567,26 @@ components:
                 roomId:
                     type: string
                 userId:
+                    type: string
+        nesgo.webapi.v1.UpdateRoomRequest:
+            type: object
+            properties:
+                roomId:
+                    type: string
+                name:
+                    type: string
+                private:
+                    type: boolean
+        nesgo.webapi.v1.UpdateRoomResponse:
+            type: object
+            properties:
+                roomId:
+                    type: string
+                name:
+                    type: string
+                private:
+                    type: boolean
+                password:
                     type: string
         nesgo.webapi.v1.User:
             type: object
